@@ -1,3 +1,11 @@
+2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/gtksourcecompletion.c:
+	* gtksourceview/gtksourcecompletionprovider.c:
+	* gtksourceview/gtksourcecompletionprovider.h:
+	* tests/gsc-provider-test.c:
+	Removed gtk_source_completion_provider_finish.
+
 2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
 
 	* gtksourceview/gtksourcecompletiontriggerkey.h:
